k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver
  labels:
    app: goserver
spec:
  namespace: matheusses-dev
  selector:
    matchLabels:
      app: goserver
  replicas: 1
  template:
    metadata:
      labels:
        app: goserver
    spec:
      containers:
        - name: goserver
          image: "matheusses/hello-go:v12.0"

          resources:
            requests:
              memory: "20Mi"
              cpu: "0.3"
            limits:
              memory: "25Mi"
              cpu: "0.3"

          startupProbe:
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 3 # every 3 seconds will check 
            failureThreshold: 30 # it will try 30 times before giving up

          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 5 # every 5 seconds will check 
            failureThreshold: 3 # if it fail 3 times, it will restart
            timeoutSeconds: 1 # if it takes more than 1 second, it will restart
            successThreshold: 1 # if it succeeds 1 time, it will be considered healthy
            initialDelaySeconds: 10 # wait 10 seconds before starting the probe
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 5 # every 5 seconds will check 
            failureThreshold: 1 # if it fail 1 time, it will restart
            timeoutSeconds: 1 # if it takes more than 1 second, it will restart
            successThreshold: 1 # if it succeeds 1 time, it will be considered healthy
            initialDelaySeconds: 15 # wait 10 seconds before starting the probe


          volumeMounts:
            - mountPath: "/go/myfamily"
              name: config
            - mountPath: "/go/pvc"
              name: goserver-volume
      volumes:
        - name: goserver-volume
          persistentVolumeClaim:
            claimName: goserver-pvc
        
        - name: config
          configMap:
            name: configmap-family
            items:
            - key: members
              path: "family.txt"
