k8s/mysql-service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service-headless
spec:
  clusterIP: None
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql
