k8s/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: LoadBalancer
  ports:
    - name: goserver-service 
      port: 80
      protocol: TCP
      targetPort: 8000
